[package]
name = "serde_versions"
version = "0.2.3"
edition = "2024"
description = "Library that brings (de-)serializable Version struct"
repository = "https://github.com/egevtech/serde_versions"
license = "BSD-3-Clause"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
